optimize Report for Animals clean view and unroll for Animals

--- a/app/views/animal_events/_form.html.haml
+++ b/app/views/animal_events/_form.html.haml
@@ -4,7 +4,7 @@
   -association :parent
 
 -field_set(:animal) do |f|
-  -association :animal
+  -association :animal, :source => :here
   -association :animal_group
 
 -field_set(:delay) do |f|
