--- a/app/views/animals/_form.html.haml
+++ b/app/views/animals/_form.html.haml
@@ -12,10 +12,10 @@
   =image_tag(@animal.picture.url(:thumb))
 
 -field_set(:genealogy) do # partie entrée sortie de l entité animal
-  -association :mother
-  -association :father
+  -association :mother, :source => :mother
+  -association :father, :source => :father
 
--field_set(:stock) do # partie entrée sortie de l entité animal
+-field_set(:movement) do # partie entrée sortie de l entité animal
   -input :is_external
   -input :income_on
   -input :income_reasons
