Fixes some tests

--- a/app/views/document_templates/_form.html.haml
+++ b/app/views/document_templates/_form.html.haml
@@ -1,8 +1,8 @@
 -field_set do
   -input :name
   -input :code
-  -input :family, :choices => DocumentTemplate.families
-  -input :nature, :choices => DocumentTemplate.natures
+  -input :family
+  -input :nature
   -input :to_archive
   -input :by_default
   -input :active
