--- a/app/views/deposits/_form.html.haml
+++ b/app/views/deposits/_form.html.haml
@@ -1,16 +1,8 @@
--# TODO Deposit form
--if @deposit.new_record?
-  =subheading :new_deposit, :mode=>@deposit.mode.name, :count=>@deposit.mode.depositable_payments.size
+=field_set do
+  -association :mode, :field => :hidden
+  -association :responsible, :source => :employees
+  -input :created_on
+  -input :comment
 
-=formalize do |f|
-  -f.error :deposit
-  -f.title :infos
-  -# f.field :deposit, :cash_id, :choices=>{:reflection=>:self_bank_accounts}, :new=>{:nature=>:bank_account}
-  -f.field :deposit, :responsible_id, :choices=>{:reflection=>:users}
-  -f.field :deposit, :created_on
-  -f.field :deposit, :comment
-
-=hidden_field_tag :mode_id, @deposit.mode_id
-
-%h2=tc :incoming_payments
-=list :depositable_payments
+=field_set :incoming_payments do
+  -partial :depositable_payments
