--- a/app/views/entities/_mail_fields.html.haml
+++ b/app/views/entities/_mail_fields.html.haml
@@ -1,10 +1,11 @@
 -# Generated automatically. Don't edit this file.
+-entity_address ||= f.object
 .nested-fields
   =link_to_remove_association('labels.remove_mail'.t, f, :class => 'nested-remove remove-mail')
-  =f.input(:canal, :as => :hidden, :wrapper_html => {:id => 'canal-wrapper'})
-  =f.input(:mail_line_1, :wrapper_html => {:id => 'mail_line_1-wrapper'})
-  =f.input(:mail_line_2, :wrapper_html => {:id => 'mail_line_2-wrapper'})
-  =f.input(:mail_line_3, :wrapper_html => {:id => 'mail_line_3-wrapper'})
-  =f.input(:mail_line_4, :wrapper_html => {:id => 'mail_line_4-wrapper'})
-  =f.input(:mail_line_5, :wrapper_html => {:id => 'mail_line_5-wrapper'})
-  =f.input(:mail_line_6, :wrapper_html => {:id => 'mail_line_6-wrapper'})
+  =f.input(:canal, :as => :hidden, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'canal-field'})
+  =f.input(:mail_line_1, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'mail-line-1-field'})
+  =f.input(:mail_line_2, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'mail-line-2-field'})
+  =f.input(:mail_line_3, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'mail-line-3-field'})
+  =f.input(:mail_line_4, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'mail-line-4-field'})
+  =f.input(:mail_line_5, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'mail-line-5-field'})
+  =f.input(:mail_line_6, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'mail-line-6-field'})
