--- a/app/views/entities/_mobile_fields.html.haml
+++ b/app/views/entities/_mobile_fields.html.haml
@@ -1,5 +1,6 @@
 -# Generated automatically. Don't edit this file.
+-entity_address ||= f.object
 .nested-fields
   =link_to_remove_association('labels.remove_mobile'.t, f, :class => 'nested-remove remove-mobile')
-  =f.input(:canal, :as => :hidden, :wrapper_html => {:id => 'canal-wrapper'})
-  =f.input(:coordinate, :as => :tel, :wrapper_html => {:id => 'coordinate-wrapper'})
+  =f.input(:canal, :as => :hidden, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'canal-field'})
+  =f.input(:coordinate, :as => :tel, :readonly => !entity_address.new_record?, :wrapper_html => {:id => 'coordinate-field'})
